--- a/projects.html
+++ b/projects.html
@@ -109,7 +109,7 @@
       <div class="caption">
         <h3>Space Tanks</h3>
         <p>Simple online Three.JS game</p>
-        <p><a href="http://www.github.com/jextrevor/spacetanks" class="btn btn-primary" role="button">View Git Repo</a></p>
+        <p><a href="http://jextrevor.github.io/spacetanks" class="btn btn-primary" role="button">View Demo</a><a href="http://www.github.com/jextrevor/spacetanks" class="btn btn-default" role="button">View Git Repo</a></p>
       </div>
     </div>
   </div>
