--- a/projects.html
+++ b/projects.html
@@ -34,7 +34,24 @@
 <h1>Projects</h1>
 <p>I have created and am working on many projects, some finished, some unfinished.</p>
 <h2>Current Projects</h2>
-<div class="row">
+  <div class="row">
+  <div class="col-sm-6 col-md-4">
+    <div class="thumbnail">
+      <div class="caption">
+        <h3>The 23rd Log</h3>
+        <p>A 3D space shooter video game for TSA.</p>
+      </div>
+    </div>
+  </div>
+  <div class="col-sm-6 col-md-4">
+    <div class="thumbnail">
+      <div class="caption">
+        <h3>Shoulder</h3>
+        <p>A UDP multiplayer game networking engine.</p>
+        <p><a href="http://www.github.com/jextrevor/shoulder" class="btn btn-primary" role="button">View Git Repo</a></p>
+      </div>
+    </div>
+  </div>
   <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
       <div class="caption">
@@ -60,7 +77,7 @@
     <div class="thumbnail">
       <div class="caption">
         <h3>Space Server</h3>
-        <p>A Space Simulation Server for running missions with 5 players and one "flight director".</p>
+        <p>A Space Simulation Server for running missions with 5 players and one "flight director". Unfortunately is broken at the moment.</p>
         <p><a href="http://spaceserver.herokuapp.com/" class="btn btn-primary" role="button">View Demo</a> <a href="http://www.github.com/jextrevor/spaceserver" class="btn btn-default" role="button">View Git Repo</a></p>
       </div>
     </div>
