--- a/projects.html
+++ b/projects.html
@@ -40,6 +40,7 @@
       <div class="caption">
         <h3>The 23rd Log</h3>
         <p>A 3D space shooter video game for TSA.</p>
+        <p>Unfortunately, source code is not available. Stable binary releases are planned.</p>
       </div>
     </div>
   </div>
