--- a/projects.html
+++ b/projects.html
@@ -62,6 +62,15 @@
       </div>
     </div>
   </div>
+    <div class="col-sm-6 col-md-4">
+    <div class="thumbnail">
+      <div class="caption">
+        <h3>Trevor Club</h3>
+        <p>The website of the Trevor Club.</p>
+        <p><a href="http://www.trevorclub.ml" class="btn btn-primary" role="button">Visit Site</a></p>
+      </div>
+    </div>
+  </div>
   <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
       <div class="caption">
@@ -78,7 +87,7 @@
     <div class="thumbnail">
       <div class="caption">
         <h3>Space Server</h3>
-        <p>A Space Simulation Server for running missions with 5 players and one "flight director". Unfortunately is broken at the moment.</p>
+        <p>A Space Simulation Server for running missions with 5 players and one "flight director".</p>
         <p><a href="http://spaceserver.herokuapp.com/" class="btn btn-primary" role="button">View Demo</a> <a href="http://www.github.com/jextrevor/spaceserver" class="btn btn-default" role="button">View Git Repo</a></p>
       </div>
     </div>
