--- a/projects.html
+++ b/projects.html
@@ -40,7 +40,7 @@
       <div class="caption">
         <h3>The 23rd Log</h3>
         <p>A 3D space shooter video game for TSA.</p>
-        <p>Unfortunately, source code is not available. Stable binary releases are planned.</p>
+        <p><a href="https://gitlab.com/projectn/the23rdlog/" class="btn btn-primary" role="button">View Git Repos</a></p>
       </div>
     </div>
   </div>
@@ -48,7 +48,7 @@
     <div class="thumbnail">
       <div class="caption">
         <h3>Trevor Club</h3>
-        <p>The website of the Trevor Club.</p>
+        <p>The website of the Trevor Club, written in HTML, CSS, JS, and PHP.</p>
         <p><a href="http://www.trevorclub.ml" class="btn btn-primary" role="button">Visit Site</a></p>
       </div>
     </div>
