--- a/projects.html
+++ b/projects.html
@@ -40,7 +40,7 @@
       <div class="caption">
         <h3>The 23rd Log</h3>
         <p>A 3D space shooter video game for TSA.</p>
-        <p><a href="https://gitlab.com/projectn/the23rdlog/" class="btn btn-primary" role="button">View Git Repos</a></p>
+        <p><a href="https://gitlab.com/projectn/the23rdlog/" class="btn btn-primary" role="button">View Git Repo</a></p>
       </div>
     </div>
   </div>
