--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title></title>
+  <title>Portfolio</title>
   <link rel="stylesheet" href="css/bootstrap.min.css" />
   <link rel="stylesheet" href="css/style.css" />
   <meta charset="utf-8" />
@@ -56,17 +56,51 @@
         <p>My favorite languages are Python and JavaScript. I love web design especially when it comes to websockets, and I
           love Linux as well as Android.</p>
         <p>My hobbies include playing the piano, listening to new-age music, going on dates, and designing innovative apps and
-          programs.</p>
+          programs.
+        </p>
       </div>
       <div class="col-xs-12 col-sm-6 col-md-5 col-xl-4">
         <img src="media/trevor.jpg" srcset="media/trevor2x.jpg 2x" width="100%" />
       </div>
-        <div class="col-xs-12">
-          <h1>My Projects</h1>
-        </div>
     </div>
-
   </div>
+  <div class="container">
+    <h1>My Projects</h1>
+    <div class="card-columns">
+
+      <div class="card text-white bg-dark">
+        <img class="card-img-top" src="media/automation.jpg" alt="" />
+        <div class="card-body">
+          <h4 class="card-title">Automation</h4>
+          <span class="badge badge-pill badge-info">Python</span>
+          <p class="card-text">A program that does asdfasdfasdfasdf.</p>
+          <a href="https://github.com/jextrevor/Automation" class="btn btn-sm btn-secondary">View Git Repo</a>
+        </div>
+      </div>
+      <div class="card text-white bg-dark">
+        <img class="card-img-top" src="media/the23rdlog.jpg" alt="" />
+        <div class="card-body">
+          <h4 class="card-title">The 23rd Log</h4>
+          <span class="badge badge-pill badge-info">JavaScript</span>
+          <p class="card-text">A program that does asdfasdfasdfasdf.</p>
+            
+          <a href="https://gitlab.com/projectn/the23rdlog" class="btn btn-sm btn-secondary">View Git Repo</a>
+        </div>
+      </div>
+      <div class="card text-white bg-dark">
+        <img class="card-img-top" src="media/sciencefair.png" alt="" />
+        <div class="card-body">
+          <h4 class="card-title">Camera-Based Motion Detection</h4>
+          <span class="badge badge-pill badge-info">Python</span>
+          <p class="card-text">A program that does asdfasdfasdfasdf.</p>
+            
+          <a href="https://github.com/jextrevor/ScienceFair" class="btn btn-sm btn-secondary">View Git Repo</a>
+        </div>
+      </div>
+    </div>
+  </div>
+  </div>
+
   <div class="modal fade" id="contact" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered" role="document">
       <div class="modal-content">
@@ -99,4 +133,5 @@
   <script src="js/scroll.js"></script>
   <script src="js/scramble.js"></script>
 </body>
+
 </html>
