--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   </nav>
   <div class="jumbotron jumbotron-fluid">
     <div class="container">
-      <h1 id="scramble" class="display-4">TREVOR JEX</h1>
+      <h1 id="scramble" class="display-4">Trevor Jex</h1>
       <p class="lead">I am a software engineer specializing in Python and JavaScript development.</p>
       <a href="#projects" type="button" class="btn btn-primary">My Projects</a>
       <button type="button" class="btn btn-info" data-toggle="modal" data-target="#contact">Contact Me</button>
@@ -64,104 +64,106 @@
       </div>
     </div>
   </div>
-  <div class="container mt-3">
-    <a name="projects"><h1>My Projects</h1></a>
-    <div class="card-columns">
+  <a name="projects">
+    <div class="container pt-3">
+      <h1 class="mb-3">My Projects</h1>
+      <div class="card-columns">
 
-      <div class="card text-white bg-dark">
-        <img class="card-img-top" src="media/automation.jpg" alt="" />
-        <div class="card-body">
-          <h4 class="card-title">
-            <span>Automation</span>
-          </h4>
-          <p class="card-text">
-            <span class="badge badge-pill badge-info">Python</span>
-            <span class="badge badge-pill badge-success">Complete</span>
-          </p>
-          <p class="card-text">Automatic music player and alarm clock for the Raspberry Pi, complete with weather and email checking capabilities.</p>
-          <a href="https://github.com/jextrevor/Automation" target="_blank" class="btn btn-sm btn-secondary">View Git Repo</a>
+        <div class="card text-white bg-dark">
+          <img class="card-img-top" src="media/automation.jpg" alt="" />
+          <div class="card-body">
+            <h4 class="card-title">
+              <span>Automation</span>
+            </h4>
+            <p class="card-text">
+              <span class="badge badge-pill badge-info">Python</span>
+              <span class="badge badge-pill badge-success">Complete</span>
+            </p>
+            <p class="card-text">Automatic music player and alarm clock for the Raspberry Pi, complete with weather and email checking capabilities.</p>
+            <a href="https://github.com/jextrevor/Automation" target="_blank" class="btn btn-sm btn-secondary">View Git Repo</a>
+          </div>
         </div>
-      </div>
-      <div class="card text-white bg-dark">
-        <img class="card-img-top" src="media/the23rdlog.jpg" alt="" />
-        <div class="card-body">
-          <h4 class="card-title">The 23rd Log</h4>
+        <div class="card text-white bg-dark">
+          <img class="card-img-top" src="media/the23rdlog.jpg" alt="" />
+          <div class="card-body">
+            <h4 class="card-title">The 23rd Log</h4>
 
-          <p class="card-text">
-            <span class="badge badge-pill badge-info">JavaScript</span>
-            <span class="badge badge-pill badge-success">Complete</span>
-          </p>
-          <p class="card-text">Video game entry for the Technology Student Association (TSA) competition, created with 3 fellow students.</p>
+            <p class="card-text">
+              <span class="badge badge-pill badge-info">JavaScript</span>
+              <span class="badge badge-pill badge-success">Complete</span>
+            </p>
+            <p class="card-text">Video game entry for the Technology Student Association (TSA) competition, created with 3 fellow students.</p>
 
-          <a href="https://gitlab.com/projectn/the23rdlog" target="_blank" class="btn btn-sm btn-secondary">View Git Repo</a>
+            <a href="https://gitlab.com/projectn/the23rdlog" target="_blank" class="btn btn-sm btn-secondary">View Git Repo</a>
+          </div>
         </div>
-      </div>
-      <div class="card text-white bg-dark">
-        <img class="card-img-top" src="media/sciencefair.png" alt="" />
-        <div class="card-body">
-          <h4 class="card-title">Camera-Based Motion Detection</h4>
-          <p class="card-text">
-            <span class="badge badge-pill badge-info">Python</span>
-            <span class="badge badge-pill badge-success">Complete</span>
-          </p>
-          <p class="card-text">Human presence detection based on the Raspberry Pi camera. Winner of 1st Place Computer Science award at 2016 CUSF.</p>
+        <div class="card text-white bg-dark">
+          <img class="card-img-top" src="media/sciencefair.png" alt="" />
+          <div class="card-body">
+            <h4 class="card-title">Camera-Based Motion Detection</h4>
+            <p class="card-text">
+              <span class="badge badge-pill badge-info">Python</span>
+              <span class="badge badge-pill badge-success">Complete</span>
+            </p>
+            <p class="card-text">Human presence detection based on the Raspberry Pi camera. Winner of 1st Place Computer Science award at 2016
+              CUSF.</p>
 
-          <a href="https://github.com/jextrevor/ScienceFair" target="_blank" class="btn btn-sm btn-secondary">View Git Repo</a>
+            <a href="https://github.com/jextrevor/ScienceFair" target="_blank" class="btn btn-sm btn-secondary">View Git Repo</a>
+          </div>
         </div>
-      </div>
-      <div class="card text-white bg-dark">
-        <img class="card-img-top" src="media/spaceserver.png" alt="" />
-        <div class="card-body">
-          <h4 class="card-title">Space Server</h4>
-          <p class="card-text">
-            <span class="badge badge-pill badge-info">Javascript</span>
-            <span class="badge badge-pill badge-info">Python</span>
-            <span class="badge badge-pill badge-success">Complete</span>
-          </p>
-          <p class="card-text">Backbone of Star Trek-like space simulations. Uses SocketIO and a custom state-syncing backend.</p>
-          <a href="http://spaceserver.herokuapp.com" target="_blank" class="btn btn-sm btn-primary">View Project</a>
-          <a href="https://github.com/jextrevor/spaceserver" target="_blank" class="btn btn-sm btn-secondary">View Git Repo</a>
+        <div class="card text-white bg-dark">
+          <img class="card-img-top" src="media/spaceserver.png" alt="" />
+          <div class="card-body">
+            <h4 class="card-title">Space Server</h4>
+            <p class="card-text">
+              <span class="badge badge-pill badge-info">Javascript</span>
+              <span class="badge badge-pill badge-info">Python</span>
+              <span class="badge badge-pill badge-success">Complete</span>
+            </p>
+            <p class="card-text">Backbone of Star Trek-like space simulations. Uses SocketIO and a custom state-syncing backend.</p>
+            <a href="http://spaceserver.herokuapp.com" target="_blank" class="btn btn-sm btn-primary">View Project</a>
+            <a href="https://github.com/jextrevor/spaceserver" target="_blank" class="btn btn-sm btn-secondary">View Git Repo</a>
+          </div>
         </div>
-      </div>
-      <div class="card text-white bg-dark">
-        <img class="card-img-top" src="media/scum.png" alt="" />
-        <div class="card-body">
-          <h4 class="card-title">Scum</h4>
-          <p class="card-text">
-            <span class="badge badge-pill badge-info">Python</span>
-            <span class="badge badge-pill badge-info">Javascript</span>
-            <span class="badge badge-pill badge-success">Complete</span>
-          </p>
-          <p class="card-text">Simple program to allow real-time play of card game Scum over the web.</p>
-          <a href="https://github.com/jextrevor/scum" target="_blank" class="btn btn-sm btn-secondary">View Git Repo</a>
+        <div class="card text-white bg-dark">
+          <img class="card-img-top" src="media/scum.png" alt="" />
+          <div class="card-body">
+            <h4 class="card-title">Scum</h4>
+            <p class="card-text">
+              <span class="badge badge-pill badge-info">Python</span>
+              <span class="badge badge-pill badge-info">Javascript</span>
+              <span class="badge badge-pill badge-success">Complete</span>
+            </p>
+            <p class="card-text">Simple program to allow real-time play of card game Scum over the web.</p>
+            <a href="https://github.com/jextrevor/scum" target="_blank" class="btn btn-sm btn-secondary">View Git Repo</a>
+          </div>
         </div>
-      </div>
-      <div class="card text-white bg-dark">
-        <div class="card-body">
-          <h4 class="card-title">Coder</h4>
-          <p class="card-text">
-            <span class="badge badge-pill badge-info">Javascript</span>
-            <span class="badge badge-pill badge-info">Python</span>
-            <span class="badge badge-pill badge-success">Complete</span>
-          </p>
-          <p class="card-text">Bookmarklet/Python app that encodes messages into invisible characters and back.</p>
-          <a href="https://github.com/jextrevor/coder" target="_blank" class="btn btn-sm btn-secondary">View Git Repo</a>
+        <div class="card text-white bg-dark">
+          <div class="card-body">
+            <h4 class="card-title">Coder</h4>
+            <p class="card-text">
+              <span class="badge badge-pill badge-info">Javascript</span>
+              <span class="badge badge-pill badge-info">Python</span>
+              <span class="badge badge-pill badge-success">Complete</span>
+            </p>
+            <p class="card-text">Bookmarklet/Python app that encodes messages into invisible characters and back.</p>
+            <a href="https://github.com/jextrevor/coder" target="_blank" class="btn btn-sm btn-secondary">View Git Repo</a>
+          </div>
         </div>
-      </div>
-      <div class="card text-white bg-dark">
-        <img class="card-img-top" src="media/quiz.png" alt="" />
-        <div class="card-body">
-          <h4 class="card-title">Quiz</h4>
-          <p class="card-text">
-            <span class="badge badge-pill badge-info">Javascript</span>
-            <span class="badge badge-pill badge-info">Python</span>
-            <span class="badge badge-pill badge-success">Complete</span>
-          </p>
-          <p class="card-text">Interactive crowd quiz that displays quiz results as they are submitted. Created for an English 11 Honors project.</p>
-          <a href="https://github.com/jextrevor/quiz" target="_blank" class="btn btn-sm btn-secondary">View Git Repo</a>
+        <div class="card text-white bg-dark">
+          <img class="card-img-top" src="media/quiz.png" alt="" />
+          <div class="card-body">
+            <h4 class="card-title">Quiz</h4>
+            <p class="card-text">
+              <span class="badge badge-pill badge-info">Javascript</span>
+              <span class="badge badge-pill badge-info">Python</span>
+              <span class="badge badge-pill badge-success">Complete</span>
+            </p>
+            <p class="card-text">Interactive crowd quiz that displays quiz results as they are submitted. Created for an English 11 Honors project.</p>
+            <a href="https://github.com/jextrevor/quiz" target="_blank" class="btn btn-sm btn-secondary">View Git Repo</a>
+          </div>
         </div>
-      </div>
-      <div class="card text-white bg-dark">
+        <div class="card text-white bg-dark">
           <img class="card-img-top" src="media/jextrevor.github.io.png" alt="" />
           <div class="card-body">
             <h4 class="card-title">jextrevor.github.io</h4>
@@ -174,20 +176,21 @@
           </div>
         </div>
         <div class="card text-white bg-dark">
-            <img class="card-img-top" src="media/complem8.png" alt="" />
-            <div class="card-body">
-              <h4 class="card-title">Complem8</h4>
-              <p class="card-text">
-                <span class="badge badge-pill badge-info">Javascript</span>
-                <span class="badge badge-pill badge-success">Complete</span>
-              </p>
-              <p class="card-text">A web app that displays random compliments. Created with 2 fellow students for English 11 Honors.</p>
-              <a href="https://github.com/jextrevor/complem8" target="_blank" class="btn btn-sm btn-secondary">View Git Repo</a>
-            </div>
+          <img class="card-img-top" src="media/complem8.png" alt="" />
+          <div class="card-body">
+            <h4 class="card-title">Complem8</h4>
+            <p class="card-text">
+              <span class="badge badge-pill badge-info">Javascript</span>
+              <span class="badge badge-pill badge-success">Complete</span>
+            </p>
+            <p class="card-text">A web app that displays random compliments. Created with 2 fellow students for English 11 Honors.</p>
+            <a href="https://github.com/jextrevor/complem8" target="_blank" class="btn btn-sm btn-secondary">View Git Repo</a>
           </div>
+        </div>
+      </div>
     </div>
-  </div>
-  </div>
+    </div>
+  </a>
 
   <div class="modal fade" id="contact" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered" role="document">
