Add Kevin's Karnival project

--- a/index.html
+++ b/index.html
@@ -153,6 +153,7 @@
         <div class="card-body">
           <h4 class="card-title">jextrevor.github.io</h4>
           <p class="card-text">
+            <span class="badge badge-pill badge-info">HTML</span>
           </p>
           <p class="card-text">My personal portfolio site (this site).</p>
           <a href="https://jextrevor.github.io" target="_blank" class="btn btn-sm btn-primary">View Project</a>
@@ -168,6 +169,17 @@
           </p>
           <p class="card-text">A web app that displays random compliments. Created with 2 fellow students for English 11 Honors.</p>
           <a href="https://github.com/jextrevor/complem8" target="_blank" class="btn btn-sm btn-secondary">View Git Repo</a>
+        </div>
+      </div>
+      <div class="card text-white bg-dark">
+        <img class="card-img-top" src="media/kevinskarnival.png" alt="" />
+        <div class="card-body">
+          <h4 class="card-title">Kevin's Karnival</h4>
+          <p class="card-text">
+            <span class="badge badge-pill badge-info">HTML</span>
+          </p>
+          <p class="card-text">Informational site for Kevin's Karnival, a fundraiser hosted by American Fork High School NHS.</p>
+          <a href="https://kevinskarnival.com" target="_blank" class="btn btn-sm btn-primary">View Project</a>
         </div>
       </div>
     </div>
