Add TJC website from ~2013

--- a/index.html
+++ b/index.html
@@ -180,6 +180,18 @@
           <a href="https://kevinskarnival.com" target="_blank" class="btn btn-sm btn-primary">View Project</a>
         </div>
       </div>
+      <div class="card text-white bg-dark">
+        <img class="card-img-top" src="media/tjc.png" alt="" />
+        <div class="card-body">
+          <h4 class="card-title">Trevor Jex Communications</h4>
+          <p class="card-text">
+            <span class="badge badge-pill badge-info">PHP</span>
+            <span class="badge badge-pill badge-info">MySQL</span>
+          </p>
+          <p class="card-text">PHP website to read and send basic messages to other users of the site.</p>
+          <a href="https://github.com/jextrevor/TJC" target="_blank" class="btn btn-sm btn-secondary">View Git Repo</a>
+        </div>
+      </div>
     </div>
   </div>
   <div class="modal fade" id="contact" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
