Revise text, update resume

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <span class="badge badge-pill badge-info">Javascript</span>
             <span class="badge badge-pill badge-info">Python</span>
           </p>
-          <p class="card-text">Bookmarklet/Python app that encodes messages into invisible characters and back.</p>
+          <p class="card-text">Bookmarklet/Python script that encodes messages into invisible characters and back.</p>
           <a href="https://github.com/jextrevor/coder" target="_blank" class="btn btn-sm btn-secondary">View Git Repo</a>
         </div>
       </div>
@@ -104,7 +104,7 @@
           <p class="card-text">
             <span class="badge badge-pill badge-info">HTML</span>
           </p>
-          <p class="card-text">Informational site for Kevin's Karnival, a fundraiser hosted by American Fork High School NHS.</p>
+          <p class="card-text">Website for Kevin's Karnival, a fundraiser hosted by American Fork High School NHS that raised $57K.</p>
           <a href="https://kevinskarnival.com" target="_blank" class="btn btn-sm btn-primary">View Project</a>
         </div>
       </div>
