--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           University in the fall of 2018. I have a passion for learning, creating and designing.</p>
         <p>My favorite languages are Python and JavaScript. I love web design, especially when it comes to responsive design
           or websockets, and I love Linux as well as Android.</p>
-        <p>My hobbies include playing the piano, listening to new-age music, going on dates, and designing innovative apps and
+        <p>My hobbies include playing the piano, playing tennis and frisbee, listening to new-age music, going on dates, and designing innovative apps and
           programs.
         </p>
       </div>
