--- a/index.html
+++ b/index.html
@@ -76,6 +76,19 @@
         </div>
       </div>
       <div class="card text-white bg-dark">
+        <img class="card-img-top" src="media/andromeda.png" alt="" />
+        <div class="card-body">
+          <h4 class="card-title">Andromeda</h4>
+          <p class="card-text">
+            <span class="badge badge-pill badge-info">React</span>
+            <span class="badge badge-pill badge-info">Javascript</span>
+            <span class="badge badge-pill badge-warning">Unfinished</span>
+          </p>
+          <p class="card-text">Abandoned project to rebuild the Space Server with two fellow students. Created with Node.JS, SocketIO and React.</p>
+          <a href="https://github.com/X-12/andromeda" target="_blank" class="btn btn-sm btn-secondary">View Git Repo</a>
+        </div>
+      </div>
+      <div class="card text-white bg-dark">
         <img class="card-img-top" src="media/the23rdlog.jpg" alt="" />
         <div class="card-body">
           <h4 class="card-title">The 23rd Log</h4>
