--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <div class="col-xs-12 col-sm-6 col-md-7 col-xl-8">
         <h1>About Me</h1>
         <p class="lead">Student and Software Engineer</p>
-        <p>My name is Trevor Jex and I am graduated from American Fork High School on May 31, 2018. I start study at Brigham Young
+        <p>My name is Trevor Jex and I graduated from American Fork High School on May 31, 2018. I start study at Brigham Young
           University in the fall of 2018. I have a passion for learning, creating and designing.</p>
         <p>My favorite languages are Python and JavaScript. I love web design, especially when it comes to responsive design
           or websockets, and I love Linux as well as Android.</p>
