--- a/index.html
+++ b/index.html
@@ -48,10 +48,9 @@
       <div class="col-xs-12 col-sm-6 col-md-7 col-xl-8">
         <h1>About Me</h1>
         <p class="lead">Student and Software Engineer</p>
-        <p>My name is Trevor Jex and I graduated from American Fork High School on May 31, 2018. I start study at Brigham Young
+        <p>My name is Trevor Jex and I graduated from American Fork High School on May 31, 2018. I begin studying at Brigham Young
           University in the fall of 2018. I have a passion for learning, creating and designing.</p>
-        <p>My favorite languages are Python and JavaScript. I love web design, especially when it comes to responsive design
-          or websockets, and I love Linux as well as Android.</p>
+        <p>My favorite languages are Python and JavaScript. I love web design, especially when it comes to CSS or websockets, and I love Linux as well as Android.</p>
         <p>My hobbies include playing the piano, playing tennis and frisbee, listening to new-age music, going on dates, and
           designing innovative apps and programs.
         </p>
@@ -65,38 +64,30 @@
     <a name="projects"></a>
     <hr />
     <h1 class="mb-3">My Projects</h1>
-    <div class="card-columns" id="project-container">
+    <div class="card-columns">
       <div class="card text-white bg-dark">
-        <img class="card-img-top" src="media/automation.jpg" alt="" />
+        <img class="card-img-top" src="media/spaceserver.png" alt="" />
         <div class="card-body">
-          <h4 class="card-title">Automation</h4>
-          <p class="card-text">
-            <span class="badge badge-pill badge-info">Python</span>
-          </p>
-          <p class="card-text">Automatic music player and alarm clock for the Raspberry Pi, complete with weather and email checking capabilities.</p>
-          <a href="https://github.com/jextrevor/Automation" target="_blank" class="btn btn-sm btn-secondary">View Git Repo</a>
-        </div>
-      </div>
-      <div class="card text-white bg-dark">
-        <img class="card-img-top" src="media/the23rdlog.jpg" alt="" />
-        <div class="card-body">
-          <h4 class="card-title">The 23rd Log</h4>
-          <p class="card-text">
-            <span class="badge badge-pill badge-info">JavaScript</span>
-          </p>
-          <p class="card-text">Video game entry for the Technology Student Association (TSA) competition, created with 3 fellow students.</p>
-          <a href="https://gitlab.com/projectn/the23rdlog" target="_blank" class="btn btn-sm btn-secondary">View Git Repo</a>
-        </div>
-      </div>
-      <div class="card text-white bg-dark">
-        <div class="card-body">
-          <h4 class="card-title">Coder</h4>
+          <h4 class="card-title">Space Server</h4>
           <p class="card-text">
             <span class="badge badge-pill badge-info">Javascript</span>
             <span class="badge badge-pill badge-info">Python</span>
           </p>
-          <p class="card-text">Bookmarklet/Python script that encodes messages into invisible characters and back.</p>
-          <a href="https://github.com/jextrevor/coder" target="_blank" class="btn btn-sm btn-secondary">View Git Repo</a>
+          <p class="card-text">Backbone of Star Trek-like space simulations. Uses SocketIO and a custom state-syncing backend.</p>
+          <a href="http://spaceserver.herokuapp.com" target="_blank" class="btn btn-sm btn-primary">View Project</a>
+          <a href="https://github.com/jextrevor/spaceserver" target="_blank" class="btn btn-sm btn-secondary">View Git Repo</a>
+        </div>
+      </div>
+      <div class="card text-white bg-dark">
+        <img class="card-img-top" src="media/sciencefair.png" alt="" />
+        <div class="card-body">
+          <h4 class="card-title">Camera-Based Motion Detection</h4>
+          <p class="card-text">
+            <span class="badge badge-pill badge-info">Python</span>
+          </p>
+          <p class="card-text">Human presence detection based on the Raspberry Pi camera. Winner of 1st Place Computer Science award at 2016 CUSF.
+          </p>
+          <a href="https://github.com/jextrevor/ScienceFair" target="_blank" class="btn btn-sm btn-secondary">View Git Repo</a>
         </div>
       </div>
       <div class="card text-white bg-dark">
@@ -111,15 +102,25 @@
         </div>
       </div>
       <div class="card text-white bg-dark">
-        <img class="card-img-top" src="media/rasm.png" alt="" />
+        <img class="card-img-top" src="media/the23rdlog.jpg" alt="" />
         <div class="card-body">
-          <h4 class="card-title">Really Awesome Space Missions</h4>
+          <h4 class="card-title">The 23rd Log</h4>
+          <p class="card-text">
+            <span class="badge badge-pill badge-info">JavaScript</span>
+          </p>
+          <p class="card-text">Video game entry for the Technology Student Association (TSA) competition, created with 3 fellow students.</p>
+          <a href="https://gitlab.com/projectn/the23rdlog" target="_blank" class="btn btn-sm btn-secondary">View Git Repo</a>
+        </div>
+      </div>
+      <div class="card text-white bg-dark">
+        <img class="card-img-top" src="media/automation.jpg" alt="" />
+        <div class="card-body">
+          <h4 class="card-title">Automation</h4>
           <p class="card-text">
             <span class="badge badge-pill badge-info">Python</span>
-            <span class="badge badge-pill badge-warning">Unfinished</span>
           </p>
-          <p class="card-text">Current project to rebuild the space server for commercial use. Feel free to contact me for access to the code.</p>
-          <a href="https://gitlab.com/jextrevor/rasm" target="_blank" class="btn btn-sm btn-secondary">View Git Repo</a>
+          <p class="card-text">Automatic music player and alarm clock for the Raspberry Pi, complete with weather and email checking capabilities.</p>
+          <a href="https://github.com/jextrevor/Automation" target="_blank" class="btn btn-sm btn-secondary">View Git Repo</a>
         </div>
       </div>
       <div class="card text-white bg-dark">
@@ -135,46 +136,6 @@
         </div>
       </div>
       <div class="card text-white bg-dark">
-        <img class="card-img-top" src="media/spaceserver.png" alt="" />
-        <div class="card-body">
-          <h4 class="card-title">Space Server</h4>
-          <p class="card-text">
-            <span class="badge badge-pill badge-info">Javascript</span>
-            <span class="badge badge-pill badge-info">Python</span>
-          </p>
-          <p class="card-text">Backbone of Star Trek-like space simulations. Uses SocketIO and a custom state-syncing backend.</p>
-          <a href="http://spaceserver.herokuapp.com" target="_blank" class="btn btn-sm btn-primary">View Project</a>
-          <a href="https://github.com/jextrevor/spaceserver" target="_blank" class="btn btn-sm btn-secondary">View Git Repo</a>
-        </div>
-      </div>
-
-      <div class="card text-white bg-dark">
-        <img class="card-img-top" src="media/sciencefair.png" alt="" />
-        <div class="card-body">
-          <h4 class="card-title">Camera-Based Motion Detection</h4>
-          <p class="card-text">
-            <span class="badge badge-pill badge-info">Python</span>
-          </p>
-          <p class="card-text">Human presence detection based on the Raspberry Pi camera. Winner of 1st Place Computer Science award at 2016 CUSF.
-          </p>
-          <a href="https://github.com/jextrevor/ScienceFair" target="_blank" class="btn btn-sm btn-secondary">View Git Repo</a>
-        </div>
-      </div>
-
-      <div class="card text-white bg-dark">
-        <img class="card-img-top" src="media/scum.png" alt="" />
-        <div class="card-body">
-          <h4 class="card-title">Scum</h4>
-          <p class="card-text">
-            <span class="badge badge-pill badge-info">Python</span>
-            <span class="badge badge-pill badge-info">Javascript</span>
-          </p>
-          <p class="card-text">Simple program to allow real-time play of card game Scum over the web.</p>
-          <a href="https://github.com/jextrevor/scum" target="_blank" class="btn btn-sm btn-secondary">View Git Repo</a>
-        </div>
-      </div>
-
-      <div class="card text-white bg-dark">
         <img class="card-img-top" src="media/quiz.png" alt="" />
         <div class="card-body">
           <h4 class="card-title">Quiz</h4>
@@ -186,8 +147,17 @@
           <a href="https://github.com/jextrevor/quiz" target="_blank" class="btn btn-sm btn-secondary">View Git Repo</a>
         </div>
       </div>
-
-
+      <div class="card text-white bg-dark">
+        <div class="card-body">
+          <h4 class="card-title">Coder</h4>
+          <p class="card-text">
+            <span class="badge badge-pill badge-info">Javascript</span>
+            <span class="badge badge-pill badge-info">Python</span>
+          </p>
+          <p class="card-text">Bookmarklet/Python script that encodes messages into invisible characters and back.</p>
+          <a href="https://github.com/jextrevor/coder" target="_blank" class="btn btn-sm btn-secondary">View Git Repo</a>
+        </div>
+      </div>
       <div class="card text-white bg-dark">
         <img class="card-img-top" src="media/andromeda.png" alt="" />
         <div class="card-body">
@@ -202,6 +172,30 @@
         </div>
       </div>
       <div class="card text-white bg-dark">
+        <img class="card-img-top" src="media/rasm.png" alt="" />
+        <div class="card-body">
+          <h4 class="card-title">Really Awesome Space Missions</h4>
+          <p class="card-text">
+            <span class="badge badge-pill badge-info">Python</span>
+            <span class="badge badge-pill badge-warning">Unfinished</span>
+          </p>
+          <p class="card-text">Current project to rebuild the Space Server for commercial use. Feel free to contact me for access to the code.</p>
+          <a href="https://gitlab.com/jextrevor/rasm" target="_blank" class="btn btn-sm btn-secondary">View Git Repo</a>
+        </div>
+      </div>
+      <div class="card text-white bg-dark">
+        <img class="card-img-top" src="media/scum.png" alt="" />
+        <div class="card-body">
+          <h4 class="card-title">Scum</h4>
+          <p class="card-text">
+            <span class="badge badge-pill badge-info">Python</span>
+            <span class="badge badge-pill badge-info">Javascript</span>
+          </p>
+          <p class="card-text">Simple program to allow real-time play of card game Scum over the web.</p>
+          <a href="https://github.com/jextrevor/scum" target="_blank" class="btn btn-sm btn-secondary">View Git Repo</a>
+        </div>
+      </div>
+      <div class="card text-white bg-dark">
         <img class="card-img-top" src="media/complem8.png" alt="" />
         <div class="card-body">
           <h4 class="card-title">Complem8</h4>
@@ -212,7 +206,6 @@
           <a href="https://github.com/jextrevor/complem8" target="_blank" class="btn btn-sm btn-secondary">View Git Repo</a>
         </div>
       </div>
-
       <div class="card text-white bg-dark">
         <img class="card-img-top" src="media/tjc.png" alt="" />
         <div class="card-body">
