Add RASM handbook

--- a/index.html
+++ b/index.html
@@ -181,6 +181,7 @@
           </p>
           <p class="card-text">Current project to rebuild the Space Server for commercial use. Feel free to contact me for access to the code.</p>
           <a href="https://gitlab.com/jextrevor/rasm" target="_blank" class="btn btn-sm btn-secondary">View Git Repo</a>
+          <a href="https://docs.google.com/document/d/1NQm2rtbJ5_WUPhlhg0gslRzUmh6Un2ZkUVqvXcefoPI/edit?usp=sharing" target="_blank" class="btn btn-sm btn-info">View Design Handbook</a>
         </div>
       </div>
       <div class="card text-white bg-dark">
@@ -244,7 +245,7 @@
   <footer>
     <div class="container">
       <hr />
-      <p>Built and designed by Trevor Jex. Copyright &copy; 2018. All rights reserved.</p>
+      <p>Built and designed by Trevor Jex, using Bootstrap. Copyright &copy; 2018. All rights reserved.</p>
     </div>
   </footer>
   <script src="js/jquery-3.3.1.min.js"></script>
