Update resume, fix main button

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <div class="container">
       <h1 id="scramble" class="display-4">Trevor Jex</h1>
       <p class="lead">I am a software engineer specializing in Python and JavaScript development.</p>
-      <a href="#projects" onclick="shuffle()" type="button" class="btn btn-primary">My Projects</a>
+      <a href="#projects" class="btn btn-primary">My Projects</a>
       <button type="button" class="btn btn-info" data-toggle="modal" data-target="#contact">Contact Me</button>
     </div>
   </div>
