--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <hr />
     <h1 class="mb-3">My Projects</h1>
     <div class="card-columns">
-      <div class="card text-white bg-dark">
+      <div class="card text-white bg-dark p-1">
         <img class="card-img-top" src="media/spaceserver.png" alt="" />
         <div class="card-body">
           <h4 class="card-title">Space Server</h4>
@@ -78,8 +78,8 @@
           <a href="https://github.com/jextrevor/spaceserver" target="_blank" class="btn btn-sm btn-secondary">View Git Repo</a>
         </div>
       </div>
-      <div class="card text-white bg-dark">
-        <img class="card-img-top" src="media/sciencefair.png" alt="" />
+      <div class="card text-white bg-dark p-1">
+        <!--<img class="card-img-top" src="media/sciencefair.png" alt="" />-->
         <div class="card-body">
           <h4 class="card-title">Camera-Based Motion Detection</h4>
           <p class="card-text">
@@ -90,8 +90,8 @@
           <a href="https://github.com/jextrevor/ScienceFair" target="_blank" class="btn btn-sm btn-secondary">View Git Repo</a>
         </div>
       </div>
-      <div class="card text-white bg-dark">
-        <img class="card-img-top" src="media/kevinskarnival.png" alt="" />
+      <div class="card text-white bg-dark p-1">
+        <!--<img class="card-img-top" src="media/kevinskarnival.png" alt="" />-->
         <div class="card-body">
           <h4 class="card-title">Kevin's Karnival</h4>
           <p class="card-text">
@@ -101,8 +101,8 @@
           <a href="https://kevinskarnival.com" target="_blank" class="btn btn-sm btn-primary">View Project</a>
         </div>
       </div>
-      <div class="card text-white bg-dark">
-        <img class="card-img-top" src="media/the23rdlog.jpg" alt="" />
+      <div class="card text-white bg-dark p-1">
+        <img class="card-img-top" src="media/the23rdlog.png" alt="" />
         <div class="card-body">
           <h4 class="card-title">The 23rd Log</h4>
           <p class="card-text">
@@ -112,8 +112,8 @@
           <a href="https://gitlab.com/projectn/the23rdlog" target="_blank" class="btn btn-sm btn-secondary">View Git Repo</a>
         </div>
       </div>
-      <div class="card text-white bg-dark">
-        <img class="card-img-top" src="media/automation.jpg" alt="" />
+      <div class="card text-white bg-dark p-1">
+        <img class="card-img-top" src="media/automation.png" alt="" />
         <div class="card-body">
           <h4 class="card-title">Automation</h4>
           <p class="card-text">
@@ -123,8 +123,8 @@
           <a href="https://github.com/jextrevor/Automation" target="_blank" class="btn btn-sm btn-secondary">View Git Repo</a>
         </div>
       </div>
-      <div class="card text-white bg-dark">
-        <img class="card-img-top" src="media/jextrevor.github.io.png" alt="" />
+      <div class="card text-white bg-dark p-1">
+        <!--<img class="card-img-top" src="media/jextrevor.github.io.png" alt="" />-->
         <div class="card-body">
           <h4 class="card-title">jextrevor.github.io</h4>
           <p class="card-text">
@@ -135,8 +135,8 @@
           <a href="https://github.com/jextrevor/jextrevor.github.io" target="_blank" class="btn btn-sm btn-secondary">View Git Repo</a>
         </div>
       </div>
-      <div class="card text-white bg-dark">
-        <img class="card-img-top" src="media/quiz.png" alt="" />
+      <div class="card text-white bg-dark p-1">
+        <img class="card-img-top mt-1" src="media/quiz.png" alt="" />
         <div class="card-body">
           <h4 class="card-title">Quiz</h4>
           <p class="card-text">
@@ -147,7 +147,7 @@
           <a href="https://github.com/jextrevor/quiz" target="_blank" class="btn btn-sm btn-secondary">View Git Repo</a>
         </div>
       </div>
-      <div class="card text-white bg-dark">
+      <div class="card text-white bg-dark p-1">
         <div class="card-body">
           <h4 class="card-title">Coder</h4>
           <p class="card-text">
@@ -158,7 +158,7 @@
           <a href="https://github.com/jextrevor/coder" target="_blank" class="btn btn-sm btn-secondary">View Git Repo</a>
         </div>
       </div>
-      <div class="card text-white bg-dark">
+      <div class="card text-white bg-dark p-1">
         <img class="card-img-top" src="media/andromeda.png" alt="" />
         <div class="card-body">
           <h4 class="card-title">Andromeda</h4>
@@ -171,7 +171,7 @@
           <a href="https://github.com/X-12/andromeda" target="_blank" class="btn btn-sm btn-secondary">View Git Repo</a>
         </div>
       </div>
-      <div class="card text-white bg-dark">
+      <div class="card text-white bg-dark p-1">
         <img class="card-img-top" src="media/rasm.png" alt="" />
         <div class="card-body">
           <h4 class="card-title">Really Awesome Space Missions</h4>
@@ -181,11 +181,11 @@
           </p>
           <p class="card-text">Current project to rebuild the Space Server for commercial use. Feel free to contact me for access to the code.</p>
           <a href="https://gitlab.com/jextrevor/rasm" target="_blank" class="btn btn-sm btn-secondary">View Git Repo</a>
-          <a href="https://docs.google.com/document/d/1NQm2rtbJ5_WUPhlhg0gslRzUmh6Un2ZkUVqvXcefoPI/edit?usp=sharing" target="_blank" class="btn btn-sm btn-info">View Design Handbook</a>
+          <a href="https://docs.google.com/document/d/1NQm2rtbJ5_WUPhlhg0gslRzUmh6Un2ZkUVqvXcefoPI/edit?usp=sharing" target="_blank" class="btn btn-sm btn-info">View Handbook</a>
         </div>
       </div>
-      <div class="card text-white bg-dark">
-        <img class="card-img-top" src="media/scum.png" alt="" />
+      <div class="card text-white bg-dark p-1">
+        <!--<img class="card-img-top" src="media/scum.png" alt="" />-->
         <div class="card-body">
           <h4 class="card-title">Scum</h4>
           <p class="card-text">
@@ -196,7 +196,7 @@
           <a href="https://github.com/jextrevor/scum" target="_blank" class="btn btn-sm btn-secondary">View Git Repo</a>
         </div>
       </div>
-      <div class="card text-white bg-dark">
+      <div class="card text-white bg-dark p-1">
         <img class="card-img-top" src="media/complem8.png" alt="" />
         <div class="card-body">
           <h4 class="card-title">Complem8</h4>
@@ -207,8 +207,8 @@
           <a href="https://github.com/jextrevor/complem8" target="_blank" class="btn btn-sm btn-secondary">View Git Repo</a>
         </div>
       </div>
-      <div class="card text-white bg-dark">
-        <img class="card-img-top" src="media/tjc.png" alt="" />
+      <div class="card text-white bg-dark p-1">
+        <!--<img class="card-img-top" src="media/tjc.png" alt="" />-->
         <div class="card-body">
           <h4 class="card-title">Trevor Jex Communications</h4>
           <p class="card-text">
