--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
     <div class="container">
       <a class="navbar-brand" data-toggle="modal" data-target="#contact" href="#" onclick="return false;">Trevor Jex</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02"
@@ -56,7 +56,7 @@
         </p>
       </div>
       <div class="col-xs-12 col-sm-6 col-md-5 col-xl-4">
-        <img src="media/trevor.jpg" srcset="media/trevor2x.jpg 2x" width="100%" />
+        <img src="media/trevor.jpg" srcset="media/trevor2x.jpg 2x" class="rounded" width="100%" />
       </div>
     </div>
   </div>
@@ -113,7 +113,7 @@
         </div>
       </div>
       <div class="card border-primary p-1">
-        <img class="card-img-top" src="media/automation.png" alt="" />
+        <img class="card-img-top" src="media/automation.jpg" alt="" />
         <div class="card-body">
           <h4 class="card-title">Automation</h4>
           <p class="card-text">
@@ -245,7 +245,7 @@
   <footer>
     <div class="container">
       <hr />
-      <p>Built and designed by Trevor Jex, using Bootstrap. Copyright &copy; 2018. All rights reserved.</p>
+      <p>Built and designed by Trevor Jex. Copyright &copy; 2018. All rights reserved.</p>
     </div>
   </footer>
   <script src="js/jquery-3.3.1.min.js"></script>
