--- a/index.2.html
+++ b/index.2.html
@@ -7,20 +7,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Sunflower:300,500,700" rel="stylesheet">
     <link rel="stylesheet" href="css/style.2.css" />
 </head>
 
 <body>
-    <div class="container">
-            <h1>About Me</h1>
-            <p class="lead">Student and Software Engineer</p>
-            <p>My name is Trevor Jex and I graduated from American Fork High School on May 31, 2018. I begin studying at Brigham Young
-              University in the fall of 2018. I have a passion for learning, creating and designing.</p>
-            <p>My favorite languages are Python and JavaScript. I love web design, especially when it comes to CSS or websockets, and I love Linux as well as Android.</p>
-            <p>My hobbies include playing the piano, playing tennis and frisbee, listening to new-age music, going on dates, and
-              designing innovative apps and programs.
-            </p>
-    </div>
+  <div class="nav"><div class="container"><h1>Trevor Jex</h1><div class="links"><a href="#">Github</a><a href="#">Resume</a><a href="#">Contact</a></div></div></div>
+<div class="header">
+  <div class="container">
+<h1>LEARNER</h1>
+<h3>I am a software engineer specializing in Python and JavaScript development.</h3>
+<button class="primary">My Projects</button><button class="info">Contact Me</button>
+</div>
+</div>
+<div class="container">
+<h1>About Me</h1>
+<h3>Student and Software Engineer</h3>
+<p>My name is Trevor Jex and I graduated from American Fork High School on May 31, 2018. I begin studying at Brigham Young
+    University in the fall of 2018. I have a passion for learning, creating and designing.</p>
+  <p>My favorite languages are Python and JavaScript. I love web design, especially when it comes to CSS or websockets, and I love Linux as well as Android.</p>
+  <p>My hobbies include playing the piano, playing tennis and frisbee, listening to new-age music, going on dates, and
+    designing innovative apps and programs.
+  </p>
+</div>
 </body>
 
 </html>
