--- a/index.2.html
+++ b/index.2.html
@@ -29,6 +29,7 @@
   <p>My hobbies include playing the piano, playing tennis and frisbee, listening to new-age music, going on dates, and
     designing innovative apps and programs.
   </p>
+  <img src="media/trevor.jpg" srcset="media/trevor2x.jpg 2x" width="100%" />
 </div>
 </body>
 
