--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </p>
       </div>
       <div class="col-xs-12 col-sm-6 col-md-5 col-xl-4">
-        <img src="media/trevor.jpg" srcset="media/trevor2x.jpg 2x" class="rounded" width="100%" />
+        <img src="media/trevor.svg" srcset="media/trevor2x.jpg 2x" class="rounded" width="100%" />
       </div>
     </div>
   </div>
