Big update to style

--- a/index.2.html
+++ b/index.2.html
@@ -12,25 +12,34 @@
 </head>
 
 <body>
-  <div class="nav"><div class="container"><h1>Trevor Jex</h1><div class="links"><a href="#">Github</a><a href="#">Resume</a><a href="#">Contact</a></div></div></div>
+  <div class="nav"><div class="container"><h1>Trevor Jex</h1><div class="links"><a href="https://github.com/jextrevor" target="_blank">Github</a><a href="resume.pdf" target="_blank">Resume</a><a href="#">Contact</a></div></div></div>
 <div class="header">
   <div class="container">
-<h1>LEARNER</h1>
+<h1 id="scramble">Trevor Jex</h1>
 <h3>I am a software engineer specializing in Python and JavaScript development.</h3>
 <button class="primary">My Projects</button><button class="info">Contact Me</button>
 </div>
 </div>
 <div class="container">
-<h1>About Me</h1>
-<h3>Student and Software Engineer</h3>
+<div class="content-container">
+<div class="content">
+    <h1>About Me</h1>
+    <h3>Student and Software Engineer</h3>
 <p>My name is Trevor Jex and I graduated from American Fork High School on May 31, 2018. I begin studying at Brigham Young
     University in the fall of 2018. I have a passion for learning, creating and designing.</p>
   <p>My favorite languages are Python and JavaScript. I love web design, especially when it comes to CSS or websockets, and I love Linux as well as Android.</p>
   <p>My hobbies include playing the piano, playing tennis and frisbee, listening to new-age music, going on dates, and
     designing innovative apps and programs.
   </p>
-  <img src="media/trevor.svg" srcset="media/trevor2x.jpg 2x" width="100%" />
 </div>
+<div class="image">
+<div class="img"><img src="media/trevor.jpg" srcset="media/trevor2x.jpg 2x" width="100%" /></div>
+</div>
+</div>
+<hr />
+<p class="footer">Built and designed by Trevor Jex. Copyright &copy; 2018. All rights reserved.</p>
+</div>
+<script src="js/scramble.js"></script>
 </body>
 
 </html>
