Work on cards (need to clean up)

--- a/index.2.html
+++ b/index.2.html
@@ -36,8 +36,25 @@
 <div class="img"><img src="media/trevor.jpg" srcset="media/trevor2x.jpg 2x" width="100%" /></div>
 </div>
 </div>
-<hr />
+</div>
+<div class="dark-section">
+<div class="container">
+  <h1 class="neon">My Work</h1>
+  <hr />
+  <div class="projects">
+    <div class="project"><div class="image" ><img src="media/automation.jpg" width="100%" /></div><div class="title">Automation</div></div>
+    <div class="project"></div>
+    <div class="project"></div>
+    <div class="project"></div>
+    <div class="project"></div>
+    <div class="project-filler"></div>
+    <div class="project-filler"></div>
+    <div class="project-filler"></div>
+    <div class="project-filler"></div>
+    <div class="project-filler"></div>
+  </div>
 <p class="footer">Built and designed by Trevor Jex. Copyright &copy; 2018. All rights reserved.</p>
+</div>
 </div>
 <div id="dialog-overlay"></div>
 <div id="dialog-container">
