--- a/index.2.html
+++ b/index.2.html
@@ -17,7 +17,7 @@
   <div class="container">
 <h1 id="scramble">Trevor Jex</h1>
 <h3>I am a software engineer specializing in Python and JavaScript development.</h3>
-<button class="primary">My Projects</button><button class="info" onclick="openDialog()">Contact Me</button>
+<button href="#projects" class="primary">My Projects</button><button class="info" onclick="openDialog()">Contact Me</button>
 </div>
 </div>
 <div class="container">
@@ -39,6 +39,7 @@
 </div>
 <div class="dark-section">
 <div class="container">
+    <a name="projects"></a>
   <h1 class="neon">My Work</h1>
   <hr />
   <div class="projects">
@@ -53,6 +54,7 @@
     <div class="project-filler"></div>
     <div class="project-filler"></div>
   </div>
+  <hr />
 <p class="footer">Built and designed by Trevor Jex. Copyright &copy; 2018. All rights reserved.</p>
 </div>
 </div>
@@ -67,6 +69,8 @@
 <div class="ralign space"><hr /><button class="dark" onclick="closeDialog()">Close</button></div>
 </div>
 </div>
+<script src="js/jquery-3.3.1.min.js"></script>
+<script src="js/scroll.js"></script>
 <script src="js/scramble.js"></script>
 <script src="js/modal.js"></script>
 </body>
