--- a/index.2.html
+++ b/index.2.html
@@ -43,7 +43,27 @@
   <h1 class="neon">My Work</h1>
   <hr />
   <div class="projects">
-    <div class="project"><div class="image" ><img src="media/automation.jpg" width="100%" /></div><div class="title">Automation</div></div>
+    <div class="project" id="automation" onclick="expand('automation','automation-desc')"><div class="image" ><img src="media/automation.jpg" width="100%" /></div><div class="title">Automation</div></div>
+    <div class="project-desc" id="automation-desc" onclick="hide('automation','automation-desc')">
+      <div class="container">
+        <h1>AUTOMATION</h1>
+        <hr />
+        <p>Automation is a automatic music player and alarm clock for the Raspberry Pi. Capabilities include the following:</p>
+        <ul>
+          <li>Automatic starting of music when movement in the room is detected (using the Raspberry Pi camera)</li>
+          <li>Automatic adjustment to slight changes in environment (gradual changing of light due to the sun, camera noise)</li>
+          <li>Music alarm at a certain time, time is changeable through the web interface</li>
+          <li>Notification LED when the program is "talking" (using the Raspberry Pi Camera LED)</li>
+          <li>Statement of the weather forecast for the day when the alarm is played (cloudy, partly cloudy, sunny, etc.)</li>
+          <li>Statement of how many unread emails the user has when music starts</li>
+          <li>User-settable reminders</li>
+          <li>Web interface to toggle alarm status, play or pause music, upload new music, and set reminders</li>
+        </ul>
+        <p>The project is written in Python and is designed to run on the Model B. To run on newer models such as the B+ or Pi 2 you must change the CAMLED variable in the code to the GPIO port associated with the camera LED (32 for B+ or 2, 40 for Pi Zero).</p>
+        <button class="secondary" onclick="link('https://github.com/jextrevor/Automation');">View Github Repo</button>
+        <button class="dark" onclick="hide('automation','automation-desc')">Close Description</button>
+      </div>
+    </div>
     <div class="project"></div>
     <div class="project"></div>
     <div class="project"></div>
@@ -73,6 +93,8 @@
 <script src="js/scroll.js"></script>
 <script src="js/scramble.js"></script>
 <script src="js/modal.js"></script>
+<script src="js/expand.js"></script>
+<script src="js/buttons.js"></script>
 </body>
 
 </html>
