Remove hide on click for description

--- a/index.2.html
+++ b/index.2.html
@@ -44,7 +44,7 @@
   <hr />
   <div class="projects">
     <div class="project" id="automation" onclick="expand('automation','automation-desc')"><div class="image" ><img src="media/automation.jpg" width="100%" /></div><div class="title">Automation</div></div>
-    <div class="project-desc" id="automation-desc" onclick="hide('automation','automation-desc')">
+    <div class="project-desc" id="automation-desc">
       <div class="container">
         <h1>AUTOMATION</h1>
         <hr />
