Consolidate a few CSS variables, switch to local fonts

--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,6 @@
-@HEADER:title=Trevor Jex,,@
-  <div class="nav"><div class="container"><h1 onclick="openDialog()">Trevor Jex</h1><div class="links"><a href="https://github.com/jextrevor" target="_blank">Github</a><a href="resume.pdf" target="_blank">Resume</a><a onclick="openDialog()">Contact</a></div></div></div>
-<div class="header">
-  <div class="container">
-<h1 id="scramble">Trevor Jex</h1>
-<h3>I am a software engineer specializing in Python and JavaScript development.</h3>
-<button href="#projects" class="primary">My Projects</button><button class="info" onclick="openDialog()">Contact Me</button>
-</div>
-</div>
+@START:title=Trevor Jex,,stylepath=css/style.2.css,,@
+@NAV:,,@
+@HEADER:tagline=I am a software engineer specializing in Python and JavaScript development.,,@
 <div class="container">
 <div class="content-container">
 <div class="content">
