--- a/index.3.html
+++ b/index.3.html
@@ -6,22 +6,33 @@
     <title>Trevor Jex</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Sunflower:300,500,700" rel="stylesheet">
     <link rel="stylesheet" href="css/style.2.css" />
 </head>
 
 <body>
 
-  <div class="nav"><div class="container"><h1 onclick="openDialog()">Trevor Jex</h1><div class="links"><a href="https://github.com/jextrevor" target="_blank">Github</a><a href="resume.pdf" target="_blank">Resume</a><a onclick="openDialog()">Contact</a></div></div></div>
+
+<div class="nav">
+    <div class="container">
+        <h1 onclick="openDialog()">Trevor Jex</h1>
+        <div class="links">
+            <a href="https://github.com/jextrevor" target="_blank">Github</a>
+            <a href="resume.pdf" target="_blank">Resume</a>
+            <a onclick="openDialog()">Contact</a>
+        </div>
+    </div>
+</div>
+
+
 <div class="header">
-  <div class="container">
-<h1 id="scramble">Trevor Jex</h1>
-<h3>I am a software engineer specializing in Python and JavaScript development.</h3>
-<button href="#projects" class="primary">My Projects</button><button class="info" onclick="openDialog()">Contact Me</button>
+    <div class="container">
+        <h1 id="scramble">Trevor Jex</h1>
+        <h3>I am a software engineer specializing in Python and JavaScript development.</h3>
+        <button href="#projects" class="primary">My Projects</button>
+        <button class="info" onclick="openDialog()">Contact Me</button>
+    </div>
 </div>
-</div>
+
 <div class="container">
 <div class="content-container">
 <div class="content">
