--- a/src/templates.html
+++ b/src/templates.html
@@ -1,4 +1,4 @@
-#HEADER#
+#START#
 <!DOCTYPE html>
 <html lang="en">
 
@@ -6,11 +6,31 @@
     <title>{{title}}</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Sunflower:300,500,700" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.2.css" />
+    <link rel="stylesheet" href="{{stylepath}}" />
 </head>
 
 <body>
 #END#
+#NAV#
+<div class="nav">
+    <div class="container">
+        <h1 onclick="openDialog()">Trevor Jex</h1>
+        <div class="links">
+            <a href="https://github.com/jextrevor" target="_blank">Github</a>
+            <a href="resume.pdf" target="_blank">Resume</a>
+            <a onclick="openDialog()">Contact</a>
+        </div>
+    </div>
+</div>
+#END#
+#HEADER#
+<div class="header">
+    <div class="container">
+        <h1 id="scramble">Trevor Jex</h1>
+        <h3>{{tagline}}</h3>
+        <button href="#projects" class="primary">My Projects</button>
+        @BUTTON:classname=info,,onclick=openDialog(),,content=Contact Me,,@
+    </div>
+</div>
+#END#
+#BUTTON#<button class="{{classname}}" onclick="{{onclick}}">{{content}}</button>#END#
